--- a/gke/Jenkinsfile
+++ b/gke/Jenkinsfile
@@ -58,6 +58,11 @@ pipeline {
 		}
 	    }
 	}
+	stage('Sonar Analysis') {
+   	      withSonarQubeEnv('sonar') {
+                  sh "mvn sonar:sonar"
+               }
+          }
 	stage("Publish Image") {
             agent {
     	    	kubernetes {
