--- a/gke/Jenkinsfile
+++ b/gke/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
         BUILD_CONTEXT = "build-context-${BUILD_ID}.tar.gz"
         APP_NAME = "capstoneproject"
         GCR_IMAGE = "gcr.io/${PROJECT_ID}/${APP_NAME}:${BUILD_ID}"
-	SONAR = "${PROJECT_ID}/${APP_NAME}:${BUILD_ID}"
+	 SONAR = "${PROJECT_ID}/${APP_NAME}/${BRANCH}:${BUILD_ID}"
         APP_JAR = "${APP_NAME}.war"
     }
 
